# phec

./: .gitattributes  .gitignore  .travis.yml  COPYING.Haskeleton.md  Haskeleton.hs  Makefile  README.md  phec.cabal
benchmark/: Bench.hs
benchmark/Crypto/Phec/: PrimesBench.hs
test-suite/: HLint.hs  HPC.hs  Haddock.hs
test-suite/Crypto/Phec/: PrimesSpec.hs
