name: phec
version: 0.0.0
cabal-version: >=1.20
build-type: Simple
license: LGPL-3
license-files:
    COPYING
    COPYING.LESSER
    COPYING.Haskeleton.md
copyright: 2015 Stian Ellingsen <stian@plaimi.net>
maintainer: Stian Ellingsen <stian@plaimi.net>
synopsis: Modified Pohlig–Hellman exponentiation cipher
description:
    This package provides a variant of the Pohlig–Hellman
    exponentiation cipher, modified to prevent the ciphertext
    from leaking one bit of information about the plaintext.
category: Cryptography
author: Stian Ellingsen <stian@plaimi.net>
tested-with: GHC ==7.8 GHC ==7.10
extra-source-files:
    README.md

source-repository head
  type:     git
  location: https://github.com/stiell/phec.git

flag test-spec
    description: Enable spec tests
    default: True
flag test-examples
    description: Test examples in documentation
    default: True
flag test-coverage
    description: Check code coverage of spec tests
    default: True
flag test-documentation
    description: Check Haddock coverage
    default: True
flag test-style
    description: Check code using HLint
    default: True

library
    exposed-modules:
        Crypto.Phec.Primes
        -- HASKELETON: New.Module
    build-depends:
        base ==4.*,
        arithmoi ==0.4.*
    default-language: Haskell2010
    hs-source-dirs: library
    ghc-options: -Wall

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    if flag(test-spec)
        build-depends:
            base >=4.7 && <4.9,
            phec -any,
            arithmoi ==0.4.*,
            bytestring ==0.10.*,
            hspec >=2.0 && <2.3,
            QuickCheck >=2.7 && <2.9
    else
        buildable: False
    default-language: Haskell2010
    hs-source-dirs: library test-suite
    other-modules:
        Crypto.Phec.Primes
        -- HASKELETON: New.Module
        Crypto.Phec.PrimesSpec
        -- HASKELETON: New.ModuleSpec
    ghc-options: -Wall -Werror -threaded -with-rtsopts=-N
    if flag(test-coverage)
        ghc-options: -fhpc
test-suite examples
    type: exitcode-stdio-1.0
    main-is: DocTest.hs
    if flag(test-examples)
        build-depends:
            base >=4.7 && <4.9,
            Glob ==0.7.*,
            doctest ==0.9.*
    else
        buildable: False
    default-language: Haskell2010
    hs-source-dirs: test-suite
    ghc-options: -Wall -Werror
test-suite coverage
    type: exitcode-stdio-1.0
    main-is: HPC.hs
    if flag(test-coverage) && flag(test-spec)
        build-depends:
            base >=4.7 && <4.9,
            directory >=1.0 && <1.3,
            process >=1.0.1 && <1.3,
            xml ==1.3.*
    else
        buildable: False
    default-language: Haskell2010
    hs-source-dirs: test-suite
    ghc-options: -Wall -Werror
test-suite documentation
    type: exitcode-stdio-1.0
    main-is: Haddock.hs
    if flag(test-documentation)
        build-depends:
            base >=4.7 && <4.9,
            process >=1.0.1 && <1.3,
            regex-compat >=0.71 && <0.96
    else
        buildable: False
    default-language: Haskell2010
    hs-source-dirs: test-suite
    ghc-options: -Wall -Werror
test-suite style
    type: exitcode-stdio-1.0
    main-is: HLint.hs
    if flag(test-style)
        build-depends:
            base >=4.7 && <4.9,
            hlint ==1.*
    else
        buildable: False
    default-language: Haskell2010
    hs-source-dirs: test-suite
    ghc-options: -Wall -Werror

benchmark benchmarks
        build-depends:
    type: exitcode-stdio-1.0
    main-is: Bench.hs
    build-depends:
        base >=4.7 && <4.9,
        phec -any,
        arithmoi ==0.4.*,
        criterion ==1.*
    default-language: Haskell2010
    hs-source-dirs: benchmark
